@@ -1,11 +1,18 @@
 # ChangeLog for x11-misc/karamba
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.3 2003/04/05 13:03:40 shermann Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/gentoo-deutsch/Repository/ebuilds/x11-misc/karamba/Attic/ChangeLog,v 1.4 2003/04/05 16:10:55 shermann Exp $
+
+*karamba-0.14-r1 (05 Mar 2003)
+
+  05 Mar 2003; Stephan Hermann <sh@sourcecode.de>
+  Bugfix release.
+  Compilation fix (karambarootpixmap.h)
 
 *karamba-0.14 (05 Mar 2003)
 
   05 Mar 2003; Stephan Hermann <sh@sourcecode.de>
-  New version released. Improved wallpaper handling 
+  New version released.
+  Improved wallpaper handling 
   Changed index.docbook to reduce compile problems
     
 *karamba-0.13 (05 Mar 2003)
